<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina5_9" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
...
                                                            <rect key="frame" x="79" y="0.0" width="98" height="44"/>
                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="landscape"/>
                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                            <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
...
                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                    <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                                                    <state key="normal" title="iPhone 8">
                                                                        <color key="titleColor" red="0.56470588239999997" green="0.074509803920000006" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                                                                    </state>
...
                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                    <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                                                    <state key="normal" title="iPhone 8+">
                                                                        <color key="titleColor" red="0.56470588239999997" green="0.074509803920000006" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                                                                    </state>
...
                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                    <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                                                    <state key="normal" title="iPhone XS">
                                                                        <color key="titleColor" red="0.56470588239999997" green="0.074509803920000006" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                                                                    </state>
...
                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                    <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                                                    <state key="normal" title="iPhone XS Max">
                                                                        <color key="titleColor" red="0.56470588239999997" green="0.074509803920000006" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                                                                    </state>
...
                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                    <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                                                    <state key="normal" title="iPad 10.5">
                                                                        <color key="titleColor" red="0.56470588239999997" green="0.074509803920000006" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                                                                    </state>
...
                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                    <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                                                    <state key="normal" title="iPad 12.9">
                                                                        <color key="titleColor" red="0.56470588239999997" green="0.074509803920000006" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                                                                    </state>
...
                                                                    <rect key="frame" x="8" y="6" width="306" height="31"/>
                                                                    <color key="tintColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="fontSlider"/>
                                                                    <connections>
                                                                        <action selector="updateText:" destination="-1" eventType="valueChanged" id="zfG-eF-GUL"/>
...
                                                            <rect key="frame" x="0.0" y="3.3333333333333286" width="56.333333333333336" height="37"/>
                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="orientation-option"/>
                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                            <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
...
                                                            <rect key="frame" x="66.333333333333329" y="3.3333333333333286" width="56.333333333333329" height="37"/>
                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="device-option"/>
                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                            <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
...
                                                            <rect key="frame" x="132.66666666666666" y="3.3333333333333286" width="56.666666666666657" height="37"/>
                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
