...
    }
    
    /// Common name for each device
    internal var name: String {
        switch self {
        case .phone3_5inch:
            return "iPhone 4s"
        case .phone4inch:
            return "iPhone 5s"
        case .phone4_7inch:
            return "iPhone 8"
        case .phone5_5inch:
            return "iPhone 8+"
        case .phone5_8inch:
            return "iPhone XS"
...
