...
                                                    </label>
                                                </subviews>
                                            </stackView>
                                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4My-PX-Q7X">
                                                <rect key="frame" x="20" y="159.33333333333331" width="335" height="44"/>
                                                <color key="backgroundColor" red="0.56422978639999999" green="0.077530883250000002" blue="0.99607580900000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="present-button">
                                                    <bool key="isElement" value="YES"/>
                                                </accessibility>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="K4c-IM-LIv"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KmT-L3-SCd">
                                <rect key="frame" x="47" y="357" width="281" height="44"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="dismiss-button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="5vS-QO-6O8"/>
                                </constraints>
                                <state key="normal" title="Dismiss">
                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
